# django-dbml

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  production.yml  publish-to-test-pypi.yml
django_dbml/: utils.py
django_dbml/core/: __init__.py  builder.py  database_builder.py  generator.py  options.py  renderer.py  schema.py  selection.py
django_dbml/management/commands/: dbml.py
docs/: development.md
tests/: __init__.py  settings.py  test_command.py  test_utils.py
tests/testapp/: __init__.py  models.py
