[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dbml"
version = "1.1.0"
description = "Django extension aimed to generate DBML from installed models."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Michel Wilhelm", email = "michelwilhelm@gmail.com" },
]
dependencies = [
  "django>=4.2,<6.0",
]
keywords = ["django", "dbml", "schema"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/makecodesdev/django-dbml"
Repository = "https://github.com/makecodesdev/django-dbml"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-django>=4.11,<5.0",
  "ruff>=0.11,<0.13",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_dbml*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.uv]
default-groups = ["dev"]
